=======
CHANGES
=======

0.5 (unreleased)
----------------


0.4 (2010-05-19)
----------------

- If a one-page checkout succeeds, show the form's thank you page rather
  than the GetPaid thank you message.
  [davisagli]

- Allow custom PloneFormGen fields to supply their own line item fields
  by registering a (cart, field) adapter to ILineItemFactory.
  [davisagli]

- Don't require DataGridField <= 1.8a1; that doesn't work on Plone 4.
  [davisagli]

- Update imports for compatibility with Zope 2.12.
  [davisagli]

0.3 (2009-08-19)
----------------
- Grab the processor id from the correct variable

0.2.9 (2009-08-02)
------------------
- Fix a remote reference when used with ZODB mount points [larubbio]

0.2.8 (2009-07-28)
------------------
- Fix an indentation bug in the one page checkout success handler
- Remove form description text that is the exact same as the field title or uneeded

0.2.7 (2009-07-22)
------------------
- Add contact information to default mail [larubbio]
- Switch from oneshot cart to multishot. [larubbio]
- Update mailer so it works with single page checkout [larubbio]

0.2.6 (2009-07-07)
------------------
- Add shipping organization to the email [larubbio]

0.2.5 (2009-07-07)
------------------
- Expose shipping and billing names to the email template
- Expose organization to the email template
- update the default email template

0.2.4 (2009-05-27)
------------------
- Expose shipping service, method and weight to email template. [larubbio]
- Add a boolean config that tells getpaid to return to the form if the user hits 'Continue Shopping' [larubbio]

0.2.3 (2009-05-19)
------------------
- Expose shipping information in default mail template [larubbio]

0.2.2 (2009-05-19)
------------------
- Fix a two phase commit bug when used with a ZODB mount point
- Catch any exceptions that might happen when sending email.

0.2.1 (2009-05-13)
------------------

- Fix a bug where field mapping for fields in fieldsets fails to work